<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.coley</groupId>
	<artifactId>recaf</artifactId>
	<url>https://github.com/Col-E/Recaf/</url>
	<version>2.21.13</version>
	<name>Recaf</name>
	<description>A modern java bytecode editor</description>
	<!-- Variables -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<asm.version>9.2</asm.version>
		<analysis.version>1.6.0</analysis.version>
		<dude.version>1.9.6</dude.version>
		<cfr.version>0.152</cfr.version>
		<ff.version>1.5.498.29</ff.version>
		<procyon.version>0.6.0</procyon.version>
		<junit.version>5.8.2</junit.version>
		<pico.version>4.6.3</pico.version>
		<jline.version>3.21.0</jline.version>
		<jp.version>3.24.2</jp.version>
		<jfx.version>18</jfx.version>
		<spotbugs.version>4.0.0</spotbugs.version>
		<spotbugs-mvn.version>3.1.12.2</spotbugs-mvn.version>
	</properties>
	<!-- Additional repo's -->
	<repositories>
		<!-- 3rd party repo, Forge -->
		<repository>
			<id>forge</id>
			<url>https://files.minecraftforge.net/maven</url>
		</repository>
		<!-- 3rd party repo, analyzer -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- 3rd party repo, mirror -->
		<repository>
			<id>mirrors</id>
			<url>https://github.com/Col-E/jdk-tools-mirror/raw/master/repository/</url>
		</repository>
	</repositories>
	<!-- Dependencies, not jdk version specific -->
	<dependencies>
	<!-- Functionality -->
		<!--
		ASM: The "all" distribution is not updated as frequently
		and debug information is now included in these partial releases.
		* https://mvnrepository.com/artifact/org.ow2.asm/asm
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-tree
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-commons
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-util
		* https://mvnrepository.com/artifact/org.ow2.asm/asm-analysis
		-->
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-tree</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-util</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>SimAnalyzer</artifactId>
			<version>${analysis.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>CAFED00D</artifactId>
			<version>${dude.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.clyze/jphantom -->
		<!-- Temporary mirror on Jitpack -->
		<dependency>
			<groupId>com.github.Col-E</groupId>
			<artifactId>jphantom</artifactId>
			<version>1.4.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>${jp.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-symbol-solver-core -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-symbol-solver-core</artifactId>
			<version>${jp.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.benf/cfr -->
		<dependency>
			<groupId>org.benf</groupId>
			<artifactId>cfr</artifactId>
			<version>${cfr.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.bitbucket.mstrobel/procyon-core -->
		<dependency>
			<groupId>org.bitbucket.mstrobel</groupId>
			<artifactId>procyon-core</artifactId>
			<version>${procyon.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.bitbucket.mstrobel/procyon-compilertools -->
		<dependency>
			<groupId>org.bitbucket.mstrobel</groupId>
			<artifactId>procyon-compilertools</artifactId>
			<version>${procyon.version}</version>
		</dependency>
		<!-- http://files.minecraftforge.net/maven/net/minecraftforge/fernflower/ -->
		<dependency>
			<groupId>net.minecraftforge</groupId>
			<artifactId>forgeflower</artifactId>
			<version>${ff.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.0.0-jre</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.eclipsesource.minimal-json/minimal-json -->
		<dependency>
			<groupId>com.eclipsesource.minimal-json</groupId>
			<artifactId>minimal-json</artifactId>
			<version>0.9.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.github.soc/directories -->
		<dependency>
			<groupId>io.github.soc</groupId>
			<artifactId>directories</artifactId>
			<version>12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.15.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.plugface/plugface-core -->
		<dependency>
			<groupId>org.plugface</groupId>
			<artifactId>plugface-core</artifactId>
			<version>0.7.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.jregex/jregex -->
		<dependency>
			<groupId>net.sourceforge.jregex</groupId>
			<artifactId>jregex</artifactId>
			<version>1.2_01</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.atlassian.commonmark/commonmark -->
		<dependency>
			<groupId>org.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>0.18.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.cssparser/cssparser -->
		<dependency>
			<groupId>net.sourceforge.cssparser</groupId>
			<artifactId>cssparser</artifactId>
			<version>0.9.29</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>${pico.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jline/jline-terminal-jansi -->
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline-terminal-jna</artifactId>
			<version>${jline.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jline/jline-builtins -->
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline-builtins</artifactId>
			<version>${jline.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.picocli/picocli-shell-jline3 -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli-shell-jline3</artifactId>
			<version>${pico.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.10</version>
		</dependency>
		<!-- Tools -->
		<dependency>
			<groupId>com.sun</groupId>
			<artifactId>tools</artifactId>
			<version>8.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun</groupId>
			<artifactId>sa-jdi</artifactId>
			<version>8.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${jfx.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${jfx.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${jfx.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${jfx.version}</version>
			<scope>provided</scope>
		</dependency>
		<!--- Testing -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-surefire-provider</artifactId>
			<version>1.3.2</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
	<!--- User interface -->
		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<!-- Newer versions depend on Flowless 0.6.5+ which requires Java 9, do not upgrade -->
			<version>0.10.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.fxmisc.wellbehaved/wellbehavedfx -->
		<dependency>
			<groupId>org.fxmisc.wellbehaved</groupId>
			<artifactId>wellbehavedfx</artifactId>
			<version>0.3.3</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/*.psd</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<!-- Compiler version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- Maven version enforcement -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
					<id>enforce-maven</id>
					<goals>
						<goal>enforce</goal>
					</goals>
					<configuration>
						<rules>
						<requireMavenVersion>
							<version>3.1.0</version>
						</requireMavenVersion>
						</rules>
					</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<reuseForks>false</reuseForks>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
			<!-- Packaging -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>me.coley.recaf.Recaf</mainClass>
						</manifest>
						<manifestEntries>
							<Premain-Class>me.coley.recaf.Agent</Premain-Class>
							<Agent-Class>me.coley.recaf.Agent</Agent-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
							<!-- JDK 9+ compat for RichTextFX -->
							<Add-Exports>javafx.graphics/com.sun.javafx.geom javafx.graphics/com.sun.javafx.text javafx.graphics/com.sun.javafx.scene.text</Add-Exports>
							<Add-Opens>javafx.graphics/javafx.scene.text javafx.graphics/com.sun.javafx.text</Add-Opens>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<finalName>${project.artifactId}-${project.version}-J8</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<relocations>
								<relocation>
									<pattern>org.objectweb</pattern>
									<shadedPattern>lib.org.objectweb</shadedPattern>
								</relocation>
								<relocation>
									<pattern>javassit</pattern>
									<shadedPattern>lib.javassit</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
			-->
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			-->
			<!-- Style enforcement -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
					<suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<failOnViolation>true</failOnViolation>
					<violationSeverity>warning</violationSeverity>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<excludes>
						<exclude>java/**</exclude>
					</excludes>
				</configuration>
			</plugin>
            <!-- Bug/quality enforcement
                 mvn spotbugs:spotbugs - create report
                 mvn spotbugs:gui - show gui
            -->
			<!-- Disabled due to complaints by users of it not resolving
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${spotbugs-mvn.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>${spotbugs.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			-->
		</plugins>
	</build>
</project>
